RMagick 1.14.0
    o Feature request #5015, support CMYK->RGB conversions. Added the
      add_profile and delete_profiles to the Image class. Fixed the profile!,
      iptc_profile, and color_profile methods. (requested by Niklas Ekman)
    o Fix bug #5079, Image#quantum_operator method doesn't work (bug report from
      Pedro Martins)
    o Fix bug #5080, incorrect RVG images when non-0 values used for the min_x
      or min_y arguments to RVG#viewbox (bug report from Daniel Harple)

RMagick 1.13.0
    o Added transform, transform!, transpose, transpose! methods to Image class
      (available with ImageMagick 6.2.8)
    o Feature #4844, add auto_orient, auto_orient! methods to Image class
      (suggestion from John Oordopjes, available with ImageMagick 6.2.8)
    o Added adaptive_sharpen, adaptive_sharpen_channel methods to Image class
      (available with ImageMagick 6.2.7)
    o Added composite_image_channel, composite_image_channel! methods to Image
      class (added in ImageMagick 6.2.6)
    o Added radial_blur_channel method to Image class (available in
      ImageMagick 6.2.4)
    o Fix bug #4806, add hash, eql? methods to Pixel class (bug report from
      Tim Pease)
    o Change extension filename to match RubyGems 0.9.0 expectations.
    o Fix bug #4821, correct doc for Image#rotate (bug report from Tim Pease)
    o Update the Draw#annotate documentation

RMagick 1.12.0
    o Fix bug #4630, the new signature for #level is incompatible with
      releases prior to 1.10.1 (bug report from Al Evans)

RMagick 1.11.1
    o Fix bug #4511, add Makefile, rmagick_config.h as dependencies
      in the Makefile (bug report from Eric Hodel)
    o Ensure ExceptionInfo structures are freed

RMagick 1.11.0
    o Feature #3705, add resize_to_fit (thanks to Robert Manni for the code)
    o Added optimize_layers method to the ImageList class (available with
      ImageMagick 6.2.6)
    o Added limit_resource method to the Magick module